# usv_sim_cuhksz

./: .gitignore  README.md  backup.md  dockerUSV_SIM.md
usv_base_ctrl/: package.xml
usv_base_ctrl/scripts/: arrow.py  demo.py  demo_cuhksz.py  forPlot.py  headingControl_for_scene1.py  headingControl_for_scene2.py  keyboard_teleop.py  sailboat_controller.py  show.py  t.csv  test.py
usv_dynamics/foil_dynamics_plugin/src/: foil_dynamics_plugin.cpp
usv_env_disturb/water_current/: CMakeLists.txt
usv_env_disturb/water_current/maps/HECRAS/: diluvio.yaml  flooding.yaml
usv_env_disturb/water_current/msg/: Reset.msg
usv_env_disturb/water_current/scripts/: water_HECRAS.py
usv_env_disturb/wind_current/maps/OpenFoam/: openFoam_diluvio.yaml  (+2 more)
usv_env_disturb/wind_current/scripts/: windOpenFoam.py
usv_sim/launch/models/: spawn_sailboat.launch  spawn_sailboat_cuhksz.launch
usv_sim/launch/scenarios_launchs/: sailboat_scenario1.launch  sailboat_scenario2.launch  sailboat_scenario2_cuhksz.launch  sailboat_scenario_cuhksz.launch
usv_sim/launch/world/: spawn_lake.launch
usv_sim/scenes/: sailboat_scenario1.xml  sailboat_scenario2.xml  sailboat_scenario2_cuhksz.xml  sailboat_scenario_cuhksz copy.xml  sailboat_scenario_cuhksz.xml  sailboat_scenario_cuhksz_gt copy.xml  sailboat_scenario_cuhksz_gt.xml
usv_sim/world/: empty.world  empty_accelerated.world  gasometro.world  scenarioA.world  underwater.world
usv_sim/xacro/: arrow.xacro  boat_subdivided4.xacro  buoy.xacro  drone.xacro  sailboat.xacro  sailboat_cuhksz copy.xacro  sailboat_cuhksz.xacro  test.xacro  total.xacro
